Default object, and better alarm name

--- a/cloudfront/dovetail-cdn.yml
+++ b/cloudfront/dovetail-cdn.yml
@@ -61,6 +61,7 @@ Resources:
           #     LambdaFunctionARN: arn:aws:lambda:<region>:<account>:function:<name>:<version>
           TargetOriginId: dovetail-stitch-s3
           ViewerProtocolPolicy : allow-all
+        DefaultRootObject: index.html
         Enabled: true
         HttpVersion: http2
         IPV6Enabled: true
@@ -84,7 +85,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: "[Dovetail][CloudFront][ErrorRate] 5XX"
+      AlarmName: !Join ["", ["[", !Ref DistributionDomain, "][ErrorRate] 5XX"]]
       AlarmActions:
         - Fn::ImportValue:
             !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
