--- a/dns/prxu.org-hosted_zone.yml
+++ b/dns/prxu.org-hosted_zone.yml
@@ -127,12 +127,12 @@ Resources:
         - Type: A
           Name: !Sub dovetail-cdn.${Domain}
           AliasTarget:
-            DNSName: d123su6ttccuxp.cloudfront.net
+            DNSName: d1q81akgt84zc2.cloudfront.net
             HostedZoneId: Z2FDTNDATAQYW2
         - Type: AAAA
           Name: !Sub dovetail-cdn.${Domain}
           AliasTarget:
-            DNSName: d123su6ttccuxp.cloudfront.net
+            DNSName: d1q81akgt84zc2.cloudfront.net
             HostedZoneId: Z2FDTNDATAQYW2
         - Type: A
           Name: !Sub dovetail-cdn-staging.${Domain}
