Add TTLs for error responses

--- a/cloudfront/dovetail-cdn.yml
+++ b/cloudfront/dovetail-cdn.yml
@@ -49,6 +49,25 @@ Resources:
       DistributionConfig:
         Aliases:
           - !Ref DistributionDomain
+        CustomErrorResponses:
+          # s3 object not found
+          - ErrorCachingMinTTL: 0
+            ErrorCode: 403
+          # lambda returned 404
+          - ErrorCachingMinTTL: 300
+            ErrorCode: 404
+          # unknown
+          - ErrorCachingMinTTL: 10
+            ErrorCode: 500
+          # callback(null, {invalid-response})
+          - ErrorCachingMinTTL: 10
+            ErrorCode: 502
+          # timeout / memory-exceeded / callback(err)
+          - ErrorCachingMinTTL: 0
+            ErrorCode: 503
+          # unknown
+          - ErrorCachingMinTTL: 10
+            ErrorCode: 504
         DefaultCacheBehavior:
           AllowedMethods: [HEAD, GET]
           CachedMethods: [HEAD, GET]
