--- a/stacks/upload.prx.org.yml
+++ b/stacks/upload.prx.org.yml
@@ -47,9 +47,15 @@ Resources:
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Methods: "'GET,OPTIONS'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
+            ResponseTemplates:
+              application/json: ''
             StatusCode: '200'
+        RequestTemplates:
+          application/json: '{"statusCode": 200}'
       MethodResponses:
-        - ResponseParameters:
+        - ResponseModels:
+            application/json: Empty
+          ResponseParameters:
             method.response.header.Access-Control-Allow-Headers: true
             method.response.header.Access-Control-Allow-Methods: true
             method.response.header.Access-Control-Allow-Origin: true
@@ -82,7 +88,7 @@ Resources:
             method.response.header.Access-Control-Allow-Methods: true
             method.response.header.Access-Control-Allow-Origin: true
           StatusCode: '200'
-  UploadRestApiDeployment:
+  UploadRestApiDeployment1.1:
     DependsOn:
       - UploadRestApiSignatureMethod
       - UploadRestApiOptionsMethod
@@ -95,7 +101,7 @@ Resources:
       StageName: !If [CreateProductionResources, prod, prod] # TODO these shouldn't be the same
       Description: production stage for upload lambda gateway integration
       RestApiId: !Ref UploadRestApi
-      DeploymentId: !Ref UploadRestApiDeployment
+      DeploymentId: !Ref UploadRestApiDeployment1.1
       MethodSettings:
         - DataTraceEnabled: true
           HttpMethod: "*"
