--- a/stacks/upload.prx.org.yml
+++ b/stacks/upload.prx.org.yml
@@ -88,7 +88,7 @@ Resources:
             method.response.header.Access-Control-Allow-Methods: true
             method.response.header.Access-Control-Allow-Origin: true
           StatusCode: '200'
-  UploadRestApiDeployment1.1:
+  UploadRestApiDeployment02:
     DependsOn:
       - UploadRestApiSignatureMethod
       - UploadRestApiOptionsMethod
@@ -101,7 +101,7 @@ Resources:
       StageName: !If [CreateProductionResources, prod, prod] # TODO these shouldn't be the same
       Description: production stage for upload lambda gateway integration
       RestApiId: !Ref UploadRestApi
-      DeploymentId: !Ref UploadRestApiDeployment1.1
+      DeploymentId: !Ref UploadRestApiDeployment02
       MethodSettings:
         - DataTraceEnabled: true
           HttpMethod: "*"
