--- a/cloudfront/dovetail-cdn.yml
+++ b/cloudfront/dovetail-cdn.yml
@@ -50,14 +50,16 @@ Resources:
         Aliases:
           - !Ref DistributionDomain
         CustomErrorResponses:
-          # s3 object not found
-          - ErrorCachingMinTTL: 0
-            ErrorCode: 403
-          # lambda returned 404
+          # unrecognized uri, and s3 object not found
           - ErrorCachingMinTTL: 300
+            ErrorCode: 403
+            ResponseCode: 404
+            ResponsePagePath: 404.html
+          # recognized uri, arrangement not in redis
+          - ErrorCachingMinTTL: 0
             ErrorCode: 404
-          # unknown
-          - ErrorCachingMinTTL: 10
+          # lambda caught an error
+          - ErrorCachingMinTTL: 0
             ErrorCode: 500
           # callback(null, {invalid-response})
           - ErrorCachingMinTTL: 10
