Add plus.radiotopia.fm DNS record

--- a/dns/radiotopia.fm-hosted_zone.yml
+++ b/dns/radiotopia.fm-hosted_zone.yml
@@ -175,3 +175,25 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub radiopublic.${Domain}
+  Plus:
+    Type: "AWS::Route53::RecordSetGroup"
+    Properties:
+      Comment: Radiotopia Plus
+      HostedZoneId: !Ref HostedZone
+      RecordSets:
+        - Type: A
+          Name: !Sub plus.${Domain}
+          AliasTarget:
+            DNSName: d3vzcik9lcbfzv.cloudfront.net.
+            # Global CloudFront hosted zone ID
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Sub plus.${Domain}
+          AliasTarget:
+            DNSName: d3vzcik9lcbfzv.cloudfront.net.
+            # Global CloudFront hosted zone ID
+            HostedZoneId: Z2FDTNDATAQYW2
+
+
+
+
