--- a/stacks/dovetail-stitch-lambda.yml
+++ b/stacks/dovetail-stitch-lambda.yml
@@ -71,6 +71,7 @@ Resources:
                   - !Join ["", ["arn:aws:s3:::", !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, Bucket], "/*"]]
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+        - "arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess"
   # Lambda Functions
   DovetailStitchLambdaFunction:
     Type: "AWS::Lambda::Function"
@@ -81,7 +82,7 @@ Resources:
         S3ObjectVersion: !Ref CodeS3ObjectVersion
       Description: Dovetail mp3 file stitching
       Handler: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, Handler]
-      MemorySize: 1024
+      MemorySize: 3008
       Role: !GetAtt DovetailStitchLambdaExecutionIAMRole.Arn
       Runtime: nodejs6.10
       Timeout: 30
