Use REPLACE_ON_FAILURE for CD staging deploys

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -535,7 +535,7 @@ Resources:
                 Provider: CloudFormation
                 Version: 1
               Configuration:
-                ActionMode: CHANGE_SET_REPLACE
+                ActionMode: REPLACE_ON_FAILURE
                 Capabilities: CAPABILITY_IAM
                 ChangeSetName: !Sub ${AWS::StackName}RootStagingChangeSet
                 RoleArn: !GetAtt CloudFormationIAMRole.Arn
