--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -423,6 +423,7 @@ Resources:
                   - !GetAtt EnvironmentStateCaptureFunction.Arn
                   - !GetAtt ProductionConfigPseudoSourceFunction.Arn
                   - !GetAtt DeploymentNotificationFunction.Arn
+                  - !GetAtt ChangeSetDeltaNotificationFunction.Arn
         # Lets CodePipeline start CodeBuild (for acceptance tests, etc)
         - PolicyName: CodeBuildPolicy
           PolicyDocument:
