Add some notes about production deltas

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -678,6 +678,28 @@ Resources:
                 - Name: InfrastructureRepoSourceArtifact
                 - Name: RepoStateArtifact
               RunOrder: 2
+            # TODO Production delta seem to work better as part of the approval
+            # notification, just so the changes are always locked up to the
+            # button. Still need the custom function for staging, though, but
+            # for now they're duplicative.
+            # - Name: ProductionDeltaNotification
+            #   ActionTypeId:
+            #     Category: Invoke
+            #     Owner: AWS
+            #     Provider: Lambda
+            #     Version: 1
+            #   Configuration:
+            #     FunctionName: !Ref ChangeSetDeltaNotificationFunction
+            #     UserParameters: !Sub |
+            #       {
+            #         "StackName": "${AWS::StackName}-root-production",
+            #         "ChangeSetName": "${AWS::StackName}RootProductionChangeSet",
+            #         "Stage": "Production"
+            #       }
+            #   InputArtifacts:
+            #     - Name: InfrastructureRepoSourceArtifact
+            #     - Name: TemplateConfigStagingZipArtifact
+            #   RunOrder: 3
             - Name: ApproveChangeSet
               ActionTypeId:
                 Category: Approval
