--- a/cdn/dovetail-cdn.yml
+++ b/cdn/dovetail-cdn.yml
@@ -126,7 +126,7 @@ Resources:
           Value: !Ref CloudFrontDistribution
       EvaluationPeriods: "1"
       MetricName: 4xxErrorRate
-      Namespace: AWS/Lambda
+      Namespace: AWS/CloudFront
       Period: "60"
       Statistic: Average
       Threshold: "0.001"
@@ -156,7 +156,7 @@ Resources:
           Value: !Ref CloudFrontDistribution
       EvaluationPeriods: "1"
       MetricName: 5xxErrorRate
-      Namespace: AWS/Lambda
+      Namespace: AWS/CloudFront
       Period: "60"
       Statistic: Average
       Threshold: "0.001"
