--- a/cdn/dovetail-cdn.yml
+++ b/cdn/dovetail-cdn.yml
@@ -54,7 +54,7 @@ Resources:
           - ErrorCachingMinTTL: 300
             ErrorCode: 403
             ResponseCode: 404
-            ResponsePagePath: 404.html
+            ResponsePagePath: /404.html
           # recognized uri, arrangement not in redis
           - ErrorCachingMinTTL: 0
             ErrorCode: 404
