Make more noise for 403s, since they may be a race condition

--- a/cdn/dovetail-cdn.yml
+++ b/cdn/dovetail-cdn.yml
@@ -57,13 +57,13 @@ Resources:
         Aliases:
           - !Ref DistributionDomain
         CustomErrorResponses:
-          # unrecognized uri, and s3 object not found
-          - ErrorCachingMinTTL: 300
-            ErrorCode: 403
-            ResponseCode: 404
-            ResponsePagePath: /404.html
-          # recognized uri, arrangement not in redis
+          # dovetail uploaded, but file wasn't there!
           - ErrorCachingMinTTL: 0
+            ErrorCode: 403
+            ResponseCode: 500
+            ResponsePagePath: /500.html
+          # unrecognized uri or arrangement not in redis
+          - ErrorCachingMinTTL: 300
             ErrorCode: 404
           # lambda caught an error
           - ErrorCachingMinTTL: 0
