--- a/cdn/dovetail-cdn.yml
+++ b/cdn/dovetail-cdn.yml
@@ -1,6 +1,7 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
-  Creates a CloudFront distribution to origin-pull from a Dovetail ALB.
+  Creates a CloudFront distribution to origin-pull from a Dovetail S3 bucket,
+  with an origin-request Lambda to do the actual file stitching.
 Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
