Allow invoking any edge lambda of same name

--- a/stacks/dovetail-stitch-lambda.yml
+++ b/stacks/dovetail-stitch-lambda.yml
@@ -54,6 +54,16 @@ Resources:
                   - "iam:CreateServiceLinkedRole"
                 Resource:
                   - "*"
+        - PolicyName: InvokeLambdaPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "lambda:InvokeFunction"
+                Resource:
+                  # invoke permission on "secret" edge-lambda arn, in any region, any version
+                  - !Join ["", ["arn:aws:lambda:*:*:function:", !Ref AWS::Region, ".", !Ref DovetailStitchLambdaFunction, ":*"]]
         - PolicyName: DovetailStitchS3AccessPolicy
           PolicyDocument:
             Version: "2012-10-17"
