Fix circular dep

--- a/stacks/dovetail-stitch-lambda.yml
+++ b/stacks/dovetail-stitch-lambda.yml
@@ -63,7 +63,7 @@ Resources:
                   - "lambda:InvokeFunction"
                 Resource:
                   # invoke permission on "secret" edge-lambda arn, in any region, any version
-                  - !Join ["", ["arn:aws:lambda:*:*:function:", !Ref AWS::Region, ".", !Ref DovetailStitchLambdaFunction, ":*"]]
+                  - !Join ["", ["arn:aws:lambda:*:*:function:", !Ref "AWS::Region", ".*DovetailStitchLambda*:*"]]
         - PolicyName: DovetailStitchS3AccessPolicy
           PolicyDocument:
             Version: "2012-10-17"
