Match tagged Project to existing ALB

--- a/cdn/feeder-cdn.yml
+++ b/cdn/feeder-cdn.yml
@@ -62,7 +62,7 @@ Resources:
           SslSupportMethod: sni-only
       Tags:
         - Key: Project
-          Value: Dovetail
+          Value: feeder
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
