Also record/time invocations

--- a/stacks/dovetail-stitch-lambda-alarms.yml
+++ b/stacks/dovetail-stitch-lambda-alarms.yml
@@ -62,6 +62,15 @@ Resources:
         - MetricName: !Sub "dt_lambda_${EnvironmentName}_partial"
           MetricNamespace: LogMetrics
           MetricValue: $.timer
+  LambdaInvokeMetric:
+    Type: "AWS::Logs::MetricFilter"
+    Properties:
+      FilterPattern: '{ $.msg = "invoke" }'
+      LogGroupName: !Ref LambdaLogGroup
+      MetricTransformations:
+        - MetricName: !Sub "dt_lambda_${EnvironmentName}_invoke"
+          MetricNamespace: LogMetrics
+          MetricValue: $.timer
   LambdaTimeoutMetric:
     Type: "AWS::Logs::MetricFilter"
     Properties:
