--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -83,6 +83,8 @@ Parameters:
     Type: String
   DovetailStitchLambdaCodeS3ObjectVersion:
     Type: String
+  ProxyPrxOrgCodeS3ObjectVersion:
+    Type: String
   PRXUploadAccessKey:
     Type: String
   # Parameter Overrides
