--- a/stacks/proxy.prx.org.yml
+++ b/stacks/proxy.prx.org.yml
@@ -40,7 +40,7 @@ Resources:
         S3Key: lambda/PRX-proxy.prx.org.zip
         S3ObjectVersion: !Ref CodeS3ObjectVersion
       Description: Top-level proxy server for www.prx.org
-      Handler: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, Handler]
+      Handler: index.handler
       MemorySize: 192
       Role: !GetAtt ProxyLambdaIamRole.Arn
       Runtime: nodejs6.10
