Make sure root path gets proxied

--- a/stacks/proxy.prx.org.yml
+++ b/stacks/proxy.prx.org.yml
@@ -67,6 +67,17 @@ Resources:
       ParentId: !GetAtt ProxyRestApi.RootResourceId
       PathPart: "{proxy+}"
       RestApiId: !Ref ProxyRestApi
+  ProxyRestApiRootMethod:
+    Type: "AWS::ApiGateway::Method"
+    Properties:
+      AuthorizationType: NONE
+      HttpMethod: ANY
+      Integration:
+        IntegrationHttpMethod: POST
+        Type: AWS_PROXY
+        Uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${ProxyLambdaFunction.Arn}/invocations
+      RestApiId: !Ref ProxyRestApi
+      ResourceId: !GetAtt ProxyRestApi.RootResourceId
   ProxyRestApiMethod:
     Type: "AWS::ApiGateway::Method"
     Properties:
