--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -877,6 +877,7 @@ Resources:
           Fn::ImportValue:
             !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
         CodeS3ObjectVersion: !Ref ProxyPrxOrgCodeS3ObjectVersion
+        WildcardCertificateArn: !GetAtt CertificateStack.Outputs.WildcardCertificateArn
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
