--- a/stacks/proxy.prx.org.yml
+++ b/stacks/proxy.prx.org.yml
@@ -71,6 +71,8 @@ Resources:
     Properties:
       Name: !Sub "${AWS::StackName} API"
       Description: "API used by PRX Proxy Lambda"
+      BinaryMediaTypes:
+        - "*~1*" # or "*/*"
   ProxyRestApiResource:
     Type: "AWS::ApiGateway::Resource"
     Properties:
