Wrong hosted zone

--- a/stacks/proxy.prx.org.yml
+++ b/stacks/proxy.prx.org.yml
@@ -137,7 +137,7 @@ Resources:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Record sets for proxy server API
-      HostedZoneName: prx.tech.
+      HostedZoneName: prx.org.
       RecordSets:
         - Type: AAAA
           Name: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DomainName]
