--- a/dns/radiotopia.fm-hosted_zone.yml
+++ b/dns/radiotopia.fm-hosted_zone.yml
@@ -155,13 +155,13 @@ Resources:
         - Type: A
           Name: !Sub v1.${Domain}
           AliasTarget:
-            DNSName: d1eoaqplfeeo8v.cloudfront.net
+            DNSName: d1r9u0eotsa1l1.cloudfront.net
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
         - Type: AAAA
           Name: !Sub v1.${Domain}
           AliasTarget:
-            DNSName: d1eoaqplfeeo8v.cloudfront.net
+            DNSName: d1r9u0eotsa1l1.cloudfront.net
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
   Temp:
