move mediajoint stack to db directory, add tags, use security group id aws parameter type

--- a/db/rds-mediajoint.yml
+++ b/db/rds-mediajoint.yml
@@ -76,8 +76,7 @@ Parameters:
       The "MySQL_replication_tunnel" EC2 security group that contains the EC2 instance acting as the replication tunnel
       https://console.aws.amazon.com/ec2/v2/home?region=us-east-1#SecurityGroups:sort=groupId
     Default: default
-    Type: String
-    AllowedPattern: '[a-zA-Z0-9\-]+'
+    Type: AWS::EC2::SecurityGroup::Id
     ConstraintDescription: must be a valid security group id.
   RDSSubnetGroup:
     Description: >-
@@ -111,8 +110,14 @@ Resources:
       MasterUserPassword: !Ref DBPassword
       MultiAZ: !Ref MultiAZ
       Tags:
-        - Key: Name
-          Value: Master Database
+        - Key: Project
+          Value: cms.prx.org
+        - Key: Environment
+          Value: Production
+        - Key: 'prx:cloudformation:stack-name'
+          Value: !Ref AWS::StackName
+        - Key: 'prx:cloudformation:stack-id'
+          Value: !Ref AWS::StackId
       DBSubnetGroupName: !Ref RDSSubnetGroup
       VPCSecurityGroups: [!Ref EC2SecurityGroup]
 # replication won't connect via tunnel if false      
