Conditional hosted zone name

--- a/stacks/proxy.prx.org.yml
+++ b/stacks/proxy.prx.org.yml
@@ -22,16 +22,19 @@ Mappings:
   EnvironmentTypeMap:
     Testing:
       DomainName: "proxy.test.prx.tech"
+      HostedZoneName: "prx.tech."
       CorporateHost: "corporate.prx.tech"
       ExchangeHost: "exchange.test.prx.tech"
       PrxSessionKey: "_prx_session_test"
     Staging:
       DomainName: "proxy.staging.prx.tech"
+      HostedZoneName: "prx.tech."
       CorporateHost: "corporate.prx.tech"
       ExchangeHost: "exchange.staging.prx.tech"
       PrxSessionKey: "_prx_session_staging"
     Production:
       DomainName: "proxy.prx.org"
+      HostedZoneName: "prx.org."
       CorporateHost: "corporate.prx.tech"
       ExchangeHost: "exchange.prx.org"
       PrxSessionKey: "_prx_session"
@@ -151,7 +154,7 @@ Resources:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
       Comment: Record sets for proxy server API
-      HostedZoneName: prx.org.
+      HostedZoneName: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, HostedZoneName]
       RecordSets:
         - Type: AAAA
           Name: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DomainName]
