Give CloudFormation role SSM read access

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -902,6 +902,16 @@ Resources:
                   - "s3:GetObject"
                 Resource:
                   - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/*"]]
+        # Need read access to SSM system parameters
+        - PolicyName: SsmAccess
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "ssm:GetParameters"
+                Resource:
+                  - "*" # This is sort of safe
         # Give CloudFormation full access except deleting stacks
         - PolicyName: StackManipulationPolicy
           PolicyDocument:
