--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -931,10 +931,10 @@ Resources:
           Fn::ImportValue:
             !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
         StaticSiteArchiveS3ObjectVersion: !Ref RadiotopiaRadioArchiveS3ObjectVersion
-        StaticSitesS3StagingDeployBucket: "/prx/stag/radio.radiotopia.fm/DEPLOY_S3_BUCKET"
-        StaticSitesS3ProductionDeployBucket: "/prx/prod/radio.radiotopia.fm/DEPLOY_S3_BUCKET"
+        StaticSiteS3StagingDeployBucket: "/prx/stag/radio.radiotopia.fm/DEPLOY_S3_BUCKET"
+        StaticSiteS3ProductionDeployBucket: "/prx/prod/radio.radiotopia.fm/DEPLOY_S3_BUCKET"
         EnvironmentType: !Ref EnvironmentType
-        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+        S3StaticSiteDeployFunctionArn: !GetAtt S3StaticSiteDeployFunction.Arn
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
