--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -181,6 +181,11 @@ Resources:
                   - "s3:PutObject"
                 Resource:
                   - "*"
+              - Effect: Allow
+                Action:
+                  - "s3:GetObject"
+                Resource:
+                  - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket", "/*"]]
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
   S3StaticSiteDeployFunction:
