Turn on Radiotopia Radio static deploy

--- a/stacks/radio.radiotopia.fm.yml
+++ b/stacks/radio.radiotopia.fm.yml
@@ -18,12 +18,12 @@ Conditions:
 Resources:
   Temp:
     Type: "AWS::SNS::Topic"
-  # S3StaticDeploy:
-  #   Type: "Custom::S3StaticDeploy"
-  #   Properties:
-  #     ServiceToken: !Ref S3StaticSiteDeployFunctionArn
-  #     Region: !Ref AWS::Region
-  #     StaticSiteArchiveS3Bucket: !Ref CodeS3Bucket
-  #     StaticSiteArchiveS3Object: 's3-static/PRX-radio.radiotopia.fm.zip'
-  #     StaticSiteArchiveS3ObjectVersion: !Ref StaticSiteArchiveS3ObjectVersion
-  #     StaticSiteS3DeployBucket: !If [IsProduction, !Ref StaticSiteS3ProductionDeployBucket, !Ref StaticSiteS3StagingDeployBucket]
+  S3StaticDeploy:
+    Type: "Custom::S3StaticDeploy"
+    Properties:
+      ServiceToken: !Ref S3StaticSiteDeployFunctionArn
+      Region: !Ref AWS::Region
+      StaticSiteArchiveS3Bucket: !Ref CodeS3Bucket
+      StaticSiteArchiveS3Object: 's3-static/PRX-radio.radiotopia.fm.zip'
+      StaticSiteArchiveS3ObjectVersion: !Ref StaticSiteArchiveS3ObjectVersion
+      StaticSiteS3DeployBucket: !If [IsProduction, !Ref StaticSiteS3ProductionDeployBucket, !Ref StaticSiteS3StagingDeployBucket]
