Remove Radiotopia Radio stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -925,28 +925,28 @@ Resources:
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/proxy.prx.org.yml"]]
       TimeoutInMinutes: "5"
-  RadiotopiaRadioStack:
-    Type: "AWS::CloudFormation::Stack"
-    Properties:
-      NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${NotificationsStackName}-CloudFormationNotificationSnsTopic"
-      Parameters:
-        CodeS3Bucket:
-          Fn::ImportValue:
-            !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
-        StaticSiteArchiveS3ObjectVersion: !Ref RadiotopiaRadioArchiveS3ObjectVersion
-        StaticSiteS3StagingDeployBucket: "/prx/stag/radio.radiotopia.fm/DEPLOY_S3_BUCKET"
-        StaticSiteS3ProductionDeployBucket: "/prx/prod/radio.radiotopia.fm/DEPLOY_S3_BUCKET"
-        EnvironmentType: !Ref EnvironmentType
-        S3StaticSiteDeployFunctionArn: !GetAtt S3StaticSiteDeployFunction.Arn
-      Tags:
-        - Key: "prx:cloudformation:stack-name"
-          Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
-          Value: !Ref AWS::StackId
-      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/radio.radiotopia.fm.yml"]]
-      TimeoutInMinutes: "5"
+  # RadiotopiaRadioStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   Properties:
+  #     NotificationARNs:
+  #       - Fn::ImportValue:
+  #           !Sub "${NotificationsStackName}-CloudFormationNotificationSnsTopic"
+  #     Parameters:
+  #       CodeS3Bucket:
+  #         Fn::ImportValue:
+  #           !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
+  #       StaticSiteArchiveS3ObjectVersion: !Ref RadiotopiaRadioArchiveS3ObjectVersion
+  #       StaticSiteS3StagingDeployBucket: "/prx/stag/radio.radiotopia.fm/DEPLOY_S3_BUCKET"
+  #       StaticSiteS3ProductionDeployBucket: "/prx/prod/radio.radiotopia.fm/DEPLOY_S3_BUCKET"
+  #       EnvironmentType: !Ref EnvironmentType
+  #       S3StaticSiteDeployFunctionArn: !GetAtt S3StaticSiteDeployFunction.Arn
+  #     Tags:
+  #       - Key: "prx:cloudformation:stack-name"
+  #         Value: !Ref AWS::StackName
+  #       - Key: "prx:cloudformation:stack-id"
+  #         Value: !Ref AWS::StackId
+  #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/radio.radiotopia.fm.yml"]]
+  #     TimeoutInMinutes: "5"
 Outputs:
   VPCCertificateArn:
     Description: The ARN for the wildcard certificate for the VPC
