--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -185,7 +185,8 @@ Resources:
                 Action:
                   - "s3:GetObject"
                 Resource:
-                  - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket", "/*"]]
+                  - "*" # TODO This doesn't seem like it should be necessary
+                  # - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket", "/*"]]
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
   S3StaticSiteDeployFunction:
