Add GetObjectVersion permission to S3 static deploy role

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -184,9 +184,10 @@ Resources:
               - Effect: Allow
                 Action:
                   - "s3:GetObject"
+                  - "s3:GetObjectVersion"
                 Resource:
-                  - "*" # TODO This doesn't seem like it should be necessary
-                  # - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket", "/*"]]
+                  # - "*" # TODO This doesn't seem like it should be necessary
+                  - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket", "/*"]]
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
   S3StaticSiteDeployFunction:
