--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -89,6 +89,8 @@ Parameters:
     Type: String
   RadiotopiaRadioArchiveS3ObjectVersion:
     Type: String
+  BetaPrxOrgArchiveS3ObjectVersion:
+    Type: String
   # Parameter Overrides
   InfrastructureStorageStackName:
     Type: String
@@ -948,6 +950,28 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/radio.radiotopia.fm.yml"]]
+      TimeoutInMinutes: "5"
+  BetaPrxOrgStack:
+    Type: "AWS::CloudFormation::Stack"
+    Properties:
+      NotificationARNs:
+        - Fn::ImportValue:
+            !Sub "${NotificationsStackName}-CloudFormationNotificationSnsTopic"
+      Parameters:
+        CodeS3Bucket:
+          Fn::ImportValue:
+            !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
+        StaticSiteArchiveS3ObjectVersion: !Ref BetaPrxOrgArchiveS3ObjectVersion
+        StaticSiteS3StagingDeployBucket: "/prx/stag/beta.prx.org/DEPLOY_S3_BUCKET"
+        StaticSiteS3ProductionDeployBucket: "/prx/prod/beta.prx.org/DEPLOY_S3_BUCKET"
+        EnvironmentType: !Ref EnvironmentType
+        S3StaticSiteDeployFunctionArn: !GetAtt S3StaticSiteDeployFunction.Arn
+      Tags:
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/beta.prx.org.yml"]]
       TimeoutInMinutes: "5"
 Outputs:
   VPCCertificateArn:
