Use strings, not yes/no

--- a/cdn/s3-origin.yml
+++ b/cdn/s3-origin.yml
@@ -155,10 +155,10 @@ Parameters:
     Description: >
       Rewrite S3 origin 403s (file not found, and no public LIST permission) to
       index.html, to support routing for a single page app.
-    Default: No
+    Default: "No"
     AllowedValues:
-      - Yes
-      - No
+      - "Yes"
+      - "No"
 Resources:
   # ACM Certificate
   # This gets created when no ARN for a pre-existing certificate is provided
