--- a/cdn/s3-origin.yml
+++ b/cdn/s3-origin.yml
@@ -86,7 +86,7 @@ Parameters:
     Type: String
     Description: >
       The name of the S3 bucket that CloudFront will pull from, ending with
-      s3.amazon.com. (e.g., mybucket.s3.amazon.com)
+      s3.amazon.com. (e.g., mybucket.s3.amazonaws.com)
   OriginPath:
     Type: String
     Description: >
