Fix typo on target origin

--- a/cdn/s3-origin.yml
+++ b/cdn/s3-origin.yml
@@ -213,7 +213,7 @@ Resources:
           MaxTTL: !If [HasCloudFrontMaxTtl, !Ref "CloudFrontMaxTtl", !Ref "AWS::NoValue"]
           MinTTL: !If [HasCloudFrontMinTtl, !Ref "CloudFrontMinTtl", !Ref "AWS::NoValue"]
           # SmoothStreaming: Boolean
-          TargetOriginId: web-origin
+          TargetOriginId: s3-origin
           # TrustedSigners:
           #   - String
           ViewerProtocolPolicy : redirect-to-https
