Move beta to cloudfront

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -890,11 +890,16 @@ Resources:
           TTL: "300"
           Type: A
           Name: !Sub search.${Domain}
-        - ResourceRecords:
-            - "199.119.122.233"
-          TTL: "300"
-          Type: A
+        - Type: A
           Name: !Sub beta.${Domain}
+          AliasTarget:
+            DNSName: d2p9vihsjy95d2.cloudfront.net
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Sub beta.${Domain}
+          AliasTarget:
+            DNSName: d2p9vihsjy95d2.cloudfront.net
+            HostedZoneId: Z2FDTNDATAQYW2
         - ResourceRecords:
             - "199.119.122.233"
           TTL: "300"
